# flux

./: CMakeLists.txt  dispatcher.cpp  dispatcher.h  main.cpp  store.cpp  store.h  todo.qml
src/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  handlers.cpp  handlers.h  main.cpp  messageTypes.h  store.cpp  store.h  todo.qml  todo.qrc
